tests/field/set_on_bool.rev
true.foo = "value" // error: only structure instances have properties